--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .container {
-  width: 60%;
+  width: 60vw;
   border-radius: 6px;
   -webkit-box-shadow: 4px -4px 15px 0px #ff1f1f, 12px -11px 7px 0px #ff9376,
     20px -5px 7px 0px #ffe264, 20px 6px 7px 0px #f6ff33,
@@ -18,14 +18,15 @@
 input,
 button {
   display: block;
+  width: 40vw;
+  padding: 2px;
   margin: 0 auto;
-  width: 50%;
   border-width: 2px;
   border-radius: 3px;
 }
 h1 {
-  color: #4eae53;
   text-align: center;
+  color: #4eae53;
 }
 .sut {
   text-align: center;
