--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,11 @@ h1 {
 .p-3 border bg-light {
   border-radius: 10px;
 }
+footer {
+  position: absolute;
+  padding: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+  top: 90%;
+     
+}
